--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,11 @@
-# Gen Configuration
-[input]="hw:0"
-[shoutcast_server]="your_shoutcast_server"
-[port]="your_port"
-[password]="your_password"
-[stream_id]="your_stream_id"
+[Settings]
+music_folder = ./music/
+playlist_file = ./playlist.txt
+shoutcast_server = your_shoutcast_server
+port = your_port
+password = your_password
+stream_id = your_stream_id
+bitrate = 128k
+ice_name = Stream Name
+ice_description = Stream Description
+ice_genre = Genre
