--- a/config.ini
+++ b/config.ini
@@ -6,9 +6,11 @@ port = your_port
 password = your_password
 stream_id = your_stream_id
 bitrate = 128k
-crossfade_duration = 5
 normalize_audio = True
 ice_name = Stream Name
 ice_description = Stream Description
 ice_genre = Genre
 stingers_folder = ./stingers/
+dynamic_crossfade = True
+max_crossfade_duration = 10
+min_crossfade_duration = 3
