--- a/config.ini
+++ b/config.ini
@@ -14,3 +14,4 @@ stingers_folder = ./stingers/
 dynamic_crossfade = True
 max_crossfade_duration = 10
 min_crossfade_duration = 3
+log_file = /var/log/gen_error.log
