--- a/config.ini
+++ b/config.ini
@@ -14,4 +14,5 @@ stingers_folder = ./stingers/
 dynamic_crossfade = True
 max_crossfade_duration = 10
 min_crossfade_duration = 3
-log_file = /var/log/gen_error.log
+error_log_file = /var/log/gen_error.log
+playback_log_file = /var/log/gen_playback.log
