--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [Settings]
-music_folder = ./music/
+music_folder = ./audio/music/
+stingers_folder = ./audio/stingers/
 playlist_file = ./playlist.txt
 shoutcast_server = your_shoutcast_server
 port = your_port
@@ -10,9 +11,8 @@ normalize_audio = True
 ice_name = Stream Name
 ice_description = Stream Description
 ice_genre = Genre
-stingers_folder = ./stingers/
 dynamic_crossfade = True
 max_crossfade_duration = 10
 min_crossfade_duration = 3
-error_log_file = /var/log/gen_error.log
-playback_log_file = /var/log/gen_playback.log
+error_log_file = ./logs/gen_error.log
+playback_log_file = ./logs/gen_playback.log
